@@ -45,7 +45,7 @@
           conf="common->master"/>
           -->
         <dependency org="javax.jms" name="jms" rev="${jms.version}" conf="common->master" />
-        <dependency org="org.apache.activemq" name="activemq-core" rev="${activemq.version}" conf="common->master" />
+        <dependency org="org.apache.activemq" name="activemq-all" rev="${activemq.version}" conf="common->master" />
         <dependency org="javax.management.j2ee" name="management-api" rev="${javax-mgmt.version}" conf="common->master" /> 
         <dependency org="com.google.code.p.arat" name="rat-lib" rev="${rats-lib.version}" conf="releaseaudit->default"/>
 </dependencies>
